--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@ input:focus,textarea:focus,select:focus{outline:2px solid #7f5af0;outline-offset
 <span class="text-2xl font-extrabold text-white">MineDime Hosting</span>
 </a>
 <nav class="hidden md:flex gap-6 items-center text-sm">
-<a href="products.html" class="hover:underline">Products</a>
-<a href="pricing.html" class="hover:underline">Pricing</a>
-<a href="features.html" class="hover:underline">Features</a>
-<a href="support.html" class="hover:underline">Support</a>
+<a href="https://www.minedime.org/products" class="hover:underline">Products</a>
+<a href="https://www.minedime.org/pricing" class="hover:underline">Pricing</a>
+<a href="https://www.minedime.org/features" class="hover:underline">Features</a>
+<a href="https://www.minedime.org/support" class="hover:underline">Support</a>
 <a href="#" class="px-4 py-2 bg-indigo-500 rounded text-white">Client Area</a>
 </nav>
 <button id="menu-btn" class="md:hidden px-3 py-2 bg-slate-800 rounded-lg">Menu</button>
 <div id="mobile-menu" class="mobile-menu">
-<a href="products.html">Products</a>
-<a href="pricing.html">Pricing</a>
-<a href="features.html">Features</a>
-<a href="support.html">Support</a>
+<a href="https://www.minedime.org/products">Products</a>
+<a href="https://www.minedime.org/pricing">Pricing</a>
+<a href="https://www.minedime.org/features">Features</a>
+<a href="https://www.minedime.org/">Support</a>
 <a href="#">Client Area</a>
 </div>
 </header>
