--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ input:focus,textarea:focus,select:focus{outline:2px solid #7f5af0;outline-offset
 <body class="antialiased">
 
 <header class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between relative z-20">
-<a href="index.html" class="flex items-center gap-3">
+<a href="https://www.minedime.org/" class="flex items-center gap-3">
 <img src="logo.png" class="w-14 h-14 object-contain rounded-lg" alt="MineDime Logo">
 <span class="text-2xl font-extrabold text-white">MineDime Hosting</span>
 </a>
